[package]
name = "discord_presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
discord-rich-presence = "0.2.2"
eframe = "0.18.0"
egui-datepicker = {git = "https://github.com/kzurawel/egui-datepicker.git"}
