[package]
name = "discord_presence"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
discord-rich-presence = "0.2.2"
eframe = { version = "0.18.0", features = ["persistence"] }
egui-datepicker = {git = "https://github.com/kzurawel/egui-datepicker.git"}
rfd = "0.10.0"
serde = {version = "1.0.143", features = ["serde_derive"]}
serde-xml-rs = "0.5.1"
serde_json = "1.0.83"
