[package]
name = "discord_presence"
version = "0.3.0"
edition = "2021"
authors= ["Tofix.rs"]
description = "A cross-platform application for custom presence on discord"

# repo stuff
readme = "README.md"
homepage = "https://github.com/Tofix26/discord_presence"
repository = "https://github.com/Tofix26/discord_presence"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
derivative = "2.2.0"
discord-rich-presence = "0.2.2"
eframe = { version = "0.18.0", features = ["persistence"] }
egui-datepicker = {git = "https://github.com/kzurawel/egui-datepicker.git"}
rfd = "0.10.0"
serde = {version = "1.0.143", features = ["serde_derive"]}
serde-xml-rs = "0.5.1"
serde_json = "1.0.83"
